test/ok/long_identifiers.c4
let supercalifragilisticexpialadocious: int = 10;
let eventhoughthesoundofitissimplyquiteatrocious: int = supercalifragilisticexpialadocious + supercalifragilisticexpialadocious;
