test/fail/mismatch.c4
let a: int = 10;
let b: *mut int = a;
